<resources>
    <string name="app_name">Arboretum Spotter</string>

    <!-- Log In and Sign Up page strings-->
    <string name="text_app_name_title">Arboretum Spotter</string>
    <string name="text_log_in">Login</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_go_to_sign_up">Don\'t have an account? Swipe right to sign up</string>
    <string name="text_go_to_log_in">Already have an account? Swipe left to login</string>

    <!-- EditText Hints -->
    <string name="text_hint_first_name">First Name</string>
    <string name="text_hint_last_name">Last Name</string>
    <string name="text_hint_email">Email Address</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>

    <!-- Password requirements and login and signup error messages -->
    <string name="text_password_requirements_title">Password Requirements</string>
    <string name="text_password_requirements_num_chars">At least 8 characters</string>
    <string name="text_password_requirements_num_up_case">At least 1 uppercase character</string>
    <string name="text_password_requirements_num_special">At least 1 special character !@#$%^&amp;*</string>
    <string name="text_password_requirements_num_numbers">At least 1 number</string>
    <string name="text_invalid_login">Invalid username and password combination</string>
    <string name="text_please_verify_your_email">Please verify your email</string>
    <string name="text_connection_error_login">A connection error occurred, login was not successful</string>
    <string name="text_connection_error_signup">A connection error occurred, signup was not successful</string>
    <string name="text_signup_success">Sign Up was Successful</string>
    <string name="text_signup_reqs_not_met">Signup input requirements not met</string>
    <string name="text_signup_insufficient_username">Username does not meet the requirements</string>
    <string name="text_signup_insufficient_email">Email does not meet the requirements</string>
    <string name="text_signup_insufficient_password">Password does not meet the requirements</string>

    <!-- Spotter Activity strings -->
    <string name="welcome_to_spotter_activity">Welcome to Spotter Activity</string>

    <!-- Home Fragment strings -->
    <string name="home_image_description">logo</string>

    <!-- Upload Post Fragment strings -->
    <string name="text_title_upload_post">Upload Post</string>
    <string name="text_take_picture">Take Picture with Camera</string>
    <string name="text_choose_picture">Choose Picture \n from Gallery</string>
    <string name="text_add_a_picture">Add a Picture</string>
    <string name="text_select_location">Select Location</string>
    <string name="text_caption">Caption</string>
    <string name="text_new_tag">New Tag</string>
    <string name="text_tags">Tags:</string>
    <string name="text_add_tag">+ Add Tag</string>
    <string name="text_clear_tags">Clear Tags</string>
    <string name="text_upload_post">Upload Post</string>
    <string name="text_cancel">Cancel</string>

    <!-- Feed Fragment strings -->
    <string name="text_title_recent_posts">Recent Posts</string>

    <!-- Settings (Log Out) Fragment strings -->
    <string name="text_title_settings">Settings</string>
    <string name="text_log_out_question">Are you sure you want to log out?</string>
    <string name="text_log_out">Log Out</string>

    <!-- Keys -->
    <string name="intent_key_user_id">userId</string>
    <string name="intent_key_username">username</string>
    <string name="shared_pref_key_main">sharedPrefKey</string>
    <string name="shared_pref_key_user_id">userIdKey</string>
    <string name="shared_pref_key_username">usernameKey</string>

    <!-- Auth0 values TODO: Change these values to ones for the website -->
    <string name="auth0_client_id">456</string>
    <string name="auth0_domain">123</string>
    <string name="auth0_scheme">demo</string>
    <string name="api_url_example">http://10.0.2.2:8080/timesheets</string>
    <string name="text_image_of_new_post">Image of new post</string>

</resources>