<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arb_green"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/text_view_sign_up_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_app_name_title"
        android:textColor="@color/arb_cream"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_signup_first_name"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/text_hint_first_name"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edit_text_signup_last_name"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/text_hint_last_name"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edit_text_signup_email"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/text_hint_email"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edit_text_signup_username"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/text_hint_username"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edit_text_signup_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/text_hint_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="480dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textColor="@color/arb_off_black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/text_sign_up"/>

</RelativeLayout>